@@ -166,7 +166,6 @@ PluginProcess/WebProcessConnection.cpp @no-unify
 // TODO: The files here marked @no-unify should be unified once GTK's PluginProcess2 is removed.
 Shared/AccessibilityPreferences.cpp
 Shared/ActivityAssertion.cpp @no-unify
-Shared/AsyncRequest.cpp
 Shared/AuxiliaryProcess.cpp @no-unify
 Shared/BlobDataFileReferenceWithSandboxExtension.cpp @no-unify
 Shared/CacheModel.cpp
